07-02-2024/my-deploy1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment1
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: deepakumre/home-page
        ports:
        - containerPort: 80
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service1
spec:
  type: NodePort
  selector:
      app: nginx
  ports:
    - port: 80
      targetPort: 80
...
