07-02-2024/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service1
            port:
              number: 80
       - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: my-service3
            port:
              number: 80
      - path: /desktop
        pathType: Prefix
        backend:
          service:
            name: my-service2
            port:
              number: 80
